--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>My Homepage</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="css/style.css" rel="stylesheet">
+      <!-- This will show up as 'Main' in the tab -->
+      <title>My Homepage</title>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
-
+      <center><h1>Jacob Noah</h1></center>
+      <center>
+      <div class="introduction">
+        <p>Hi! I'm Jacob Noah,<br />[your things go here].</p>
+      </div>
+      </center>
   </body>
 </html>
